[package]
name = "qemu_print"
version = "0.1.0"
authors = ["Hiroki Tokunaga <tokusan441@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A crate prividing `qemu_print!` and `qemu_println!` macros to print strings to the console for debugging."
repository = "https://github.com/toku-sa-n/qemu_print"
readme = "README.md"
categories = ["no-std", "os"]
keywords = ["no_std", "OS", "QEMU"]

[features]
default = ["nightly"]
stable = ["uart_16550/stable"]
nightly = ["uart_16550/nightly"]

[dependencies]
conquer-once = { version = "0.3.2", default-features = false }
spinning_top = "0.2.4"
uart_16550 = { default-features = false, git = "https://github.com/toku-sa-n/uart_16550", branch = "git_based" }
